Fix manager dashboard display on mobile

--- a/resources/assets/src/app/pages/statistic/time/statistic.time.component.scss
+++ b/resources/assets/src/app/pages/statistic/time/statistic.time.component.scss
@@ -42,7 +42,6 @@
         clear: both;
         position: relative;
         width: 100%;
-        overflow-x: scroll;
     }
 }
 
